<resources>
    <string name="app_name">AndroidPractice</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="ventana1">ventana01</string>
    <string name="ventana2">ventana02</string>
    <string name="dato"></string>
    <string name="radiobuttons">RadioButtons</string>
    <string name="regresar">volver principal</string>
    <string name="encabezado">Encabezado</string>

    <string name="cbrojo">Red</string>
    <string name="cbazul">Blue</string>
    <string name="cbverde">Green</string>
    <string name="cbrosado">Pink</string>
    <string name="cbamarillo">Yellow</string>

    <string name="irventana2">Ir Ventana 02</string>
    <string name="irventana1">Ir Ventana 01</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main_spinner">MainSpinnerActivity</string>
    <string name="title_activity_main_toggle">MainToggleActivity</string>
    <string name="title_activity_main_scroll_view">MainScrollViewActivity</string>
    <string name="title_activity_main_horizontal_scroll_view">MainHorizontalScrollViewActivity
    </string>
    <string name="title_activity_main_cuadro_dialogo">MainCuadroDialogoActivity</string>
    <string name="title_activity_main_dialog_image">MainDialogImageActivity</string>
    <string name="title_activity_main_check_box">MainCheckBoxActivity</string>
    <string name="title_activity_main_autocompleted_tv">MainAutocompletedTVActivity</string>
    <string name="title_activity_main_horizontal">MainHorizontalActivity</string>
    <string name="title_activity_main_vertical">MainVerticalActivity</string>
    <string name="title_activity_main_permisos">MainPermisosActivity</string>
    <string name="title_activity_main_list_view">MainListViewActivity</string>
    <string name="title_activity_main_list_view_custom">MainListViewCustomActivity</string>
    <string name="title_activity_main_web_view">MainWebViewActivity</string>
    <string name="title_activity_main_web_html">MainWebHtmlActivity</string>
    <string name="title_activity_main_media_player">MainMediaPlayerActivity</string>
    <string name="title_activity_main_table_layout">MainTableLayoutActivity</string>
    <string name="title_activity_main_text_watcher">MainTextWatcherActivity</string>
    <string name="title_activity_main_autocompleted_tv2">MainAutocompletedTV2Activity</string>

    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="title_activity_main_paint_canvas">MainPaintCanvasActivity</string>
    <string name="title_activity_main_butter_knife">MainButterKnifeActivity</string>
    <string name="title_activity_main_vibrador">MainVibradorActivity</string>
    <string name="title_activity_main_vibrador_ritmico">MainVibradorRitmicoActivity</string>
    <string name="title_activity_main_linterna">MainLinternaActivity</string>
    <string name="title_activity_main_estilos">MainEstilosActivity</string>
    <string name="title_activity_main_temas">MainTemasActivity</string>
    <string name="title_activity_main_tabs">MainTabsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_video_view">MainVideoViewActivity</string>
    <string name="title_activity_main_date_picker">MainDatePickerActivity</string>
    <string name="title_activity_main_rating_bar">MainRatingBarActivity</string>

</resources>
